# Signal

./: .gitignore  AGENTS.md  PHILIPP.py  README.md  mishanya.py  philipp.parser.py  pyproject.toml  setup.py  vova.py
analysis/: README.md
analysis/configs/: boilerplate_rules.yaml  category_merge_rules.yaml
analysis/notebooks/: 01_schema_and_missing.ipynb  02_labels_and_balance.ipynb  03_duplicates.ipynb  04_text_quality.ipynb
analysis/reports/: boilerplate_candidates.csv  class_distribution.csv  class_weights.csv  clean_class_distribution.csv  clean_duplicates_removed.csv  clean_exact_duplicates_removed.csv  clean_near_duplicates_removed.csv  clean_quality_report.json  clean_summary.md  column_mapping.csv  exact_duplicates.csv  label_conflicts.csv  merge_candidates.csv  missing_values.csv  near_duplicates.csv  schema_report.json  summary.md  text_length_stats.json
analysis/src/: __init__.py  analyze_duplicates.py  analyze_labels.py  analyze_schema.py  analyze_text_quality.py  build_manual_review.py  load_dataset.py  normalize_columns.py  paths.py  rebuild_dataset.py
collectors/: __init__.py  common.py
collectors/banki_ru/: __init__.py  mainparse.py  newsparser.py
collectors/kubantv/: __init__.py  get_articles.py  get_links.py
docs/: data_schema.md  source_registry.md  workflow.md
examples/: basic_usage.py
scripts/: analyze_raw_dataset.py  export_dataset.py  rebuild_raw_dataset.py  run_banki_ru.py  run_kubantv.py  validate_dataset.py
signal/: __init__.py  core.py  generators.py  processors.py
tests/: __init__.py  test_signal.py
vova/: vova.py
(+29 files in other folders)
