[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-data"
version = "0.1.0"
description = "Data collection and dataset preparation for Signal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "jupyterlab>=4.0",
  "lxml>=5.0",
  "matplotlib>=3.8",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "PyYAML>=6.0",
  "rapidfuzz>=3.9",
  "requests>=2.31",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
